[gd_scene load_steps=7 format=3 uid="uid://bm3di23c6igmh"]

[ext_resource type="Script" path="res://scripts/enemies/chasing_enemy.gd" id="1_a7ve5"]
[ext_resource type="PackedScene" uid="uid://bwltsypi3u0ij" path="res://scenes/bullet.tscn" id="2_rhao5"]
[ext_resource type="PackedScene" uid="uid://btrs1yb00nrv2" path="res://scenes/debree/debree_cube.tscn" id="3_te0jj"]
[ext_resource type="Texture2D" uid="uid://b4g0xs0l3kshl" path="res://assets/enemies/chasing_enemy.png" id="4_wbugu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u4opb"]
radius = 22.0
height = 68.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_143kh"]
radius = 260.0
height = 520.0

[node name="ChasingEnemy" type="RigidBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_a7ve5")
bullet_scene = ExtResource("2_rhao5")
debree_scenes = Array[PackedScene]([ExtResource("3_te0jj")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_u4opb")
debug_color = Color(0.959308, 9.62615e-08, 0.522344, 0.42)

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_u4opb")
debug_color = Color(0.959308, 9.62615e-08, 0.522344, 0.42)

[node name="SearchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchArea"]
shape = SubResource("CapsuleShape2D_143kh")
debug_color = Color(0, 0.639216, 0.360784, 0.223529)

[node name="SleepingTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_wbugu")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="area_entered" from="SearchArea" to="." method="_on_search_area_area_entered"]
